Update execute function in Gamecraft Pipeline Manager microservice